# Vis-DSS

./: .gitignore  CMakeLists.txt  CMakeLists.txt.example  README.md  cpplint.py
examples/: Active-TransferLearningExample.cpp  DeepImageSummExample.cc  DeepVideoSummExample.cc  EntityFaceSummExample.cc  EntityObjectSummExample.cc  ImageClassify.cc  QueryImageSummExample.cc  QueryVideoSummExample.cc  SimpleImageSummExample.cc  SimpleVideoSummExample.cc  SupervisedDeepSubsetSelectionExample.cc  UnsupervisedDeepSubsetSelectionExample.cc
src/activeLearning/: ATL.cpp  ATL.h
src/engine/: DisparityMin.cc  DisparityMin.h  DisparitySum.cc  DisparitySum.h  FacilityLocation.cc  FacilityLocation.h  FeatureBasedFunctions.cc  FeatureBasedFunctions.h  GraphCutFunctions.cc  GraphCutFunctions.h  ProbabilisticSetCover.cc  ProbabilisticSetCover.h  SaturateCoverage.cc  SaturateCoverage.h  SetCover.cc  SetCover.h  SetFunctions.cc  SetFunctions.h  SparseFeature.cc  SparseFeature.h  increment.cc  increment.h  lazyGreedyMax.cc  lazyGreedyMax.h  mmr.cpp  mmr.h  naiveGreedyMax.cc  naiveGreedyMax.h  set.cpp  set.h  streamGreedy.cc  streamGreedy.h
src/imageSummarization/: DeepCoverImageSummarizer.cc  DeepCoverImageSummarizer.h  QuerySimImageSummarizer.cc  QuerySimImageSummarizer.h  SimpleImageSummarizer.cc  SimpleImageSummarizer.h
src/isumm/: DeepCoverImageSummarizer.cc  DeepCoverImageSummarizer.h  DeepSimImageSummarizer.cc  DeepSimImageSummarizer.h  QuerySimImageSummarizer.cc  QuerySimImageSummarizer.h  SimpleImageSummarizer.cc  SimpleImageSummarizer.h
src/subsetSelection/: SupervisedDeepSimSubsetSelection.cc  SupervisedDeepSimSubsetSelection.h  UnsupervisedDeepSimSubsetSelection.cc  UnsupervisedDeepSimSubsetSelection.h
src/utils/: ColorUtils.cc  ColorUtils.h  ImageUtils.cc  ImageUtils.h  ShotDetector.cc  ShotDetector.h  arguments.cc  arguments.h  caffeClassifier.cc  caffeClassifier.h  dlibClassifier.cc  dlibClassifier.h  dnnClassifier.cc  dnnClassifier.h  error.cc  error.h  json.hpp  summarizer.h  totalOrder.h
src/videoSummarization/: DeepCoverVideoSummarizer.cc  EntitySimVideoSummarizer.cc  QuerySimVideoSummarizer.cc  QuerySimVideoSummarizer.h  SimpleVideoSummarizer.cc  SimpleVideoSummarizer.h
src/vsumm/: DeepCoverVideoSummarizer.cc  DeepCoverVideoSummarizer.h  DeepSimVideoSummarizer.cc  DeepSimVideoSummarizer.h  EntitySimVideoSummarizer.cc  EntitySimVideoSummarizer.h  QuerySimVideoSummarizer.cc  QuerySimVideoSummarizer.h  SimpleVideoSummarizer.cc  SimpleVideoSummarizer.h
